# ki7mt-mcp-hub

./: .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  mcp-config.json  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: validate_manifest.py
.github/workflows/: docs.yml  pre-commit.yml  release.yml  sanity.yml  ssl-expiry.yml  validate-manifest.yml
adif-mcp/: ADIF_MCP_MANIFEST.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Makefile  SUPPORT.md  pyproject.toml
adif-mcp/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
adif-mcp/.github/scripts/: validate_manifest.py
adif-mcp/.github/workflows/: ci.yml  docs.yml  pre-commit.yml  release.yml  sanity.yml  ssl-expiry.yml  validate-manifest.yml
adif-mcp/docs/: image-rendering.txt  roadmap.md
adif-mcp/docs/assets/js/: mermaid-init.js
adif-mcp/docs/concepts/: adif-basics.md  choice-of-llms.md
adif-mcp/docs/dev/: code-snippets.md  command-reference.md  dev-env-setup.md  dev-plan.md  internal-api.md  release-process.md
adif-mcp/docs/integrations/: overview.md
adif-mcp/docs/integrations/eqsl/: index.md
adif-mcp/docs/mcp/: manifest.md  tools.md
adif-mcp/docs/overrides/partials/: footer.html
adif-mcp/docs/userguide/: persona-management.md
adif-mcp/src/adif_mcp/resources/spec/316/: all.json  enumerations.json  enumerations_primary_administrative_subdivision.json
docs/: index.md  program-id-policy.md
docs/concepts/: why-matters.md
docs/dev/: git-commits.md  probes.md  provider-schemas.md  testing.md
docs/integrations/lotw/: index.md
docs/mcp/: overview.md  validation.md
docs/spec/: spec.md
docs/userguide/: awards.md
temp/: ci.yml  release.yml  validate-manifest.yml
