[project]
name = "adif-mcp"
version = "0.4.4"
description = "Authoritative ADIF 3.1.6 validator and MCP server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Greg Beam", email = "ki7mt@ki7mt.io" }
]
# Strictly the dependencies for the Log Engine and MCP Gateway
dependencies = [
    "mcp>=0.1.0",
    "click>=8.1.0",
    "typing-extensions",
    "aiofiles>=25.1.0",
    "jsonschema>=4.25.1",
]

[project.scripts]
adif-mcp = "adif_mcp.cli.root:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "cli-test-helpers>=4.2.0",
    "interrogate>=1.7.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "types-aiofiles>=25.1.0.20251011",
    "types-jsonschema>=4.25.1.20251009",
]
# We are NOT including a workspace section here. 
# This ensures this folder remains a self-contained silo.